--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
-  background-image: url('./images/background.png');
-  width: 100%;
-  height: 100%;
+  background: url('./images/background.png') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
+  min-height: 950px;
 }
