--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -7,6 +7,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
+}
+
+a{
+  text-decoration: none;
+  color: white;
 }
 
 .HeaderLogo {
